--- a/index.html
+++ b/index.html
@@ -39,6 +39,8 @@
         <div class="site-title"><h1>hlin.co</h1></div>
 <ul class="posts">
   
+    <li><a href="/blog/Autodidactism_Jack-Kinsella/">Oxbridge Notes Guide To Autodidactism</a><span class="posts__date">05 Mar 2015</span></li>
+  
 </ul>
 
       </div>
