--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
   
     <li><a href="/blog/Illustrations_G-Pranckevicius/">Illustrations by Gediminas Pranckevičius</a><span class="posts__date">09 Mar 2015</span></li>
   
-    <li><a href="/blog/Autodidactism_Jack-Kinsella/">Oxbridge Notes Guide To Autodidactism</a><span class="posts__date">05 Mar 2015</span></li>
+    <li><a href="/blog/Autodidactism_Jack-Kinsella/">Guide To Autodidactism</a><span class="posts__date">05 Mar 2015</span></li>
   
 </ul>
 
