--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <link rel="alternate" type="application/rss+xml" title="Henry Lin" href="http://www.hlin.co/feed.xml">
     <!--link href="http://fonts.googleapis.com/css?family=Open+Sans:400,700" rel="stylesheet" type="text/css">
     <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/fluidbox/1.3.1/jquery.fluidbox.css"-->
-    <link rel="stylesheet" href="/assets/application-2bb93cb73d11fa843cf3c94f4950ce2b.css">
+    <link rel="stylesheet" href="/assets/application-e5887b56813d6341b40ef526446a0793.css">
     <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
     <script src="//cdnjs.cloudflare.com/ajax/libs/fluidbox/1.3.1/jquery.fluidbox.min.js"></script>
   </head>
@@ -22,7 +22,7 @@
   <body>
   <header class="site-header" role="banner">
     <div class="container">
-      <a href="/" class="logo"><img src="/assets/logo-90b96da0ff3892dd4319a78f79f27225.gif" alt="Henry Lin" class="site-logo"></a>
+      <a href="/" class="logo"><img src="/assets/logo-816e3cb347a3dcccd04df54fd94d27c7.jpg" alt="Henry Lin" class="site-logo"></a>
       <nav role="navigiation">
         <ul class="site-nav">
           <li><a href="/about/">About</a>
@@ -38,6 +38,8 @@
       <div class="container">
         <div class="site-title"><h1>hlin.co</h1></div>
 <ul class="posts">
+  
+    <li><a href="/blog/Alzheimers/">Alzheimer's Disease</a><span class="posts__date">12 Mar 2015</span></li>
   
     <li><a href="/blog/Illustrations_G-Pranckevicius/">Illustrations by Gediminas Pranckevičius</a><span class="posts__date">09 Mar 2015</span></li>
   
