--- a/index.html
+++ b/index.html
@@ -39,6 +39,8 @@
         <div class="site-title"><h1>hlin.co</h1></div>
 <ul class="posts">
   
+    <li><a href="/blog/Ghost-City/">Ghost City of Ordos</a><span class="posts__date">20 Mar 2015</span></li>
+  
     <li><a href="/blog/Alzheimers/">Alzheimer's Disease</a><span class="posts__date">12 Mar 2015</span></li>
   
     <li><a href="/blog/Illustrations_G-Pranckevicius/">Illustrations by Gediminas Pranckevičius</a><span class="posts__date">09 Mar 2015</span></li>
