Fixed draft push

--- a/index.html
+++ b/index.html
@@ -39,15 +39,13 @@
         <div class="site-title"><h1>hlin.co</h1></div>
 <ul class="posts">
   
-    <li><a href="/blog/2015-03-17-Karaoke-Disruption/">Karaoke Disruption</a><span class="posts__date">20 Mar 2015</span></li>
-  
     <li><a href="/blog/Ghost-City/">Ghost City of Ordos</a><span class="posts__date">20 Mar 2015</span></li>
-  
-    <li><a href="/blog/ideas/">Ideas</a><span class="posts__date">17 Mar 2015</span></li>
   
     <li><a href="/blog/Alzheimers/">Alzheimer's Disease</a><span class="posts__date">12 Mar 2015</span></li>
   
-    <li><a href="/blog/2015-01-01-template/"></a><span class="posts__date">10 Mar 2015</span></li>
+    <li><a href="/blog/Illustrations_G-Pranckevicius/">Illustrations by Gediminas Pranckevičius</a><span class="posts__date">09 Mar 2015</span></li>
+  
+    <li><a href="/blog/Autodidactism_Jack-Kinsella/">Guide To Autodidactism</a><span class="posts__date">05 Mar 2015</span></li>
   
 </ul>
 
