--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <link rel="alternate" type="application/rss+xml" title="Henry Lin" href="http://www.hlin.co/feed.xml">
     <!--link href="http://fonts.googleapis.com/css?family=Open+Sans:400,700" rel="stylesheet" type="text/css">
     <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/fluidbox/1.3.1/jquery.fluidbox.css"-->
-    <link rel="stylesheet" href="/assets/application-e5887b56813d6341b40ef526446a0793.css">
+    <link rel="stylesheet" href="/assets/application-2916b18a83e4b662d0cb26eadee1c66c.css">
     <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
     <script src="//cdnjs.cloudflare.com/ajax/libs/fluidbox/1.3.1/jquery.fluidbox.min.js"></script>
   </head>
@@ -39,6 +39,8 @@
         <div class="site-title"><h1>hlin.co</h1></div>
 <ul class="posts">
   
+    <li><a href="/blog/Singularity-Outcomes/">Singularity Outcomes</a><span class="posts__date">02 Apr 2015</span></li>
+  
     <li><a href="/blog/Emoji-Bonanza/">Emoji Bonanza</a><span class="posts__date">27 Mar 2015</span></li>
   
     <li><a href="/blog/Ghost-City/">Ghost City of Ordos</a><span class="posts__date">20 Mar 2015</span></li>
@@ -46,8 +48,6 @@
     <li><a href="/blog/Alzheimers/">Alzheimer's Disease</a><span class="posts__date">12 Mar 2015</span></li>
   
     <li><a href="/blog/Illustrations_G-Pranckevicius/">Illustrations by Gediminas Pranckevičius</a><span class="posts__date">09 Mar 2015</span></li>
-  
-    <li><a href="/blog/Autodidactism_Jack-Kinsella/">Guide To Autodidactism</a><span class="posts__date">05 Mar 2015</span></li>
   
 </ul>
 
