--- a/index.html
+++ b/index.html
@@ -39,6 +39,8 @@
         <div class="site-title"><h1>hlin.co</h1></div>
 <ul class="posts">
   
+    <li><a href="/blog/Hawaii/">Hawai'i</a><span class="posts__date">31 Aug 2015</span></li>
+  
     <li><a href="/blog/Singularity-Outcomes/">Singularity Outcomes</a><span class="posts__date">02 Apr 2015</span></li>
   
     <li><a href="/blog/Emoji-Bonanza/">Emoji Bonanza</a><span class="posts__date">27 Mar 2015</span></li>
@@ -46,8 +48,6 @@
     <li><a href="/blog/Ghost-City/">Ghost City of Ordos</a><span class="posts__date">20 Mar 2015</span></li>
   
     <li><a href="/blog/Alzheimers/">Alzheimer's Disease</a><span class="posts__date">12 Mar 2015</span></li>
-  
-    <li><a href="/blog/Illustrations_G-Pranckevicius/">Illustrations by Gediminas Pranckevičius</a><span class="posts__date">09 Mar 2015</span></li>
   
 </ul>
 
