--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <link rel="alternate" type="application/rss+xml" title="Henry Lin" href="http://www.hlin.co/feed.xml">
     <!--link href="http://fonts.googleapis.com/css?family=Open+Sans:400,700" rel="stylesheet" type="text/css">
     <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/fluidbox/1.3.1/jquery.fluidbox.css"-->
-    <link rel="stylesheet" href="/assets/application-2916b18a83e4b662d0cb26eadee1c66c.css">
+    <link type="text/css" rel="stylesheet" href="/assets/application.css">
     <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
     <script src="//cdnjs.cloudflare.com/ajax/libs/fluidbox/1.3.1/jquery.fluidbox.min.js"></script>
   </head>
@@ -22,7 +22,7 @@
   <body>
   <header class="site-header" role="banner">
     <div class="container">
-      <a href="/" class="logo"><img src="/assets/logo-816e3cb347a3dcccd04df54fd94d27c7.jpg" alt="Henry Lin" class="site-logo"></a>
+      <a href="/" class="logo"><img src="/assets/logo.jpg" alt="Henry Lin" class="site-logo"></a>
       <nav role="navigiation">
         <ul class="site-nav">
           <li><a href="/about/">About</a>
@@ -39,6 +39,8 @@
         <div class="site-title"><h1>hlin.co</h1></div>
 <ul class="posts">
   
+    <li><a href="/blog/Create-RSS-Feeds/">Create RSS Feeds</a><span class="posts__date">18 Jul 2016</span></li>
+  
     <li><a href="/blog/Hawaii/">Hawai'i</a><span class="posts__date">31 Aug 2015</span></li>
   
     <li><a href="/blog/Singularity-Outcomes/">Singularity Outcomes</a><span class="posts__date">02 Apr 2015</span></li>
@@ -46,8 +48,6 @@
     <li><a href="/blog/Emoji-Bonanza/">Emoji Bonanza</a><span class="posts__date">27 Mar 2015</span></li>
   
     <li><a href="/blog/Ghost-City/">Ghost City of Ordos</a><span class="posts__date">20 Mar 2015</span></li>
-  
-    <li><a href="/blog/Alzheimers/">Alzheimer's Disease</a><span class="posts__date">12 Mar 2015</span></li>
   
 </ul>
 
