--- a/about/index.html
+++ b/about/index.html
@@ -41,8 +41,8 @@
 </div-->
 
 <div class="about-blurb">
-  <h1>Hi! I'm Henry</h1>
-  <p>I run, enjoy learning what makes a person happy, and work as a data specialist.</p>
+  <h1>Hi! I'm Henry.</h1>
+  <p>I run, enjoy learning what makes a person fulfilled, and work as a data specialist.</p>
   <br/>
   <p class="about-blurb__icons">
     <a rel="nofollow" href="http://www.hlin.co/feed.xml"><i class="icon-feed"></i></a>
@@ -58,7 +58,7 @@
 
     <footer class="site-footer">
       <div class="container">
-        &copy; Henry Lin 2015.
+        &copy; Henry Lin 2017.
       </div>
     </footer>
 
